auth changes and swagger update
